# blat-tutorial

./: README.md  pyproject.toml
crawl/: README.md  main.py
parse/: README.md  main.py
parse/documents/: content.html
